  * pidof/killall5 - make omit pid list a dynamic one.
  * pidof - provide '-n' to skip stat(2) syscall on network based FS.
  * init - avoid compiler warnings
  * init - initialize console by using the macros from ttydefaults.h
  * init - add the possiblity to ignore further interrupts from keyboard
  * init - add the possiblity to set sane terminal line settings

sysvinit (2.88dsf) UNRELEASED; urgency=low

  [ Petter Reinholdtsen ]
  * Mention new home on Savannah in README.
  * Revert change from Fedora/RedHat where the now obsolete command
    INIT_CMD_CHANGECONS was introduced.  Based on feedback and patch
    from Bill Nottingham.
  * Adjust makefile to make sure the install directories are created
    before files are copied into them.
  * Simplify build rules, based on patch from Mike Frysinger and Gentoo.
  * Fix minor bug in optimizing of argument parsing.  Based on
    report from jakemus on freshmeat.
  * Add casts to get rid of compiler warning about signed/unsigned issues.
  * Change tty handling in init to make sure the UTF-8 flag is not cleared
    on boot.  Patch from Samuel Thibault.
  * Add Makefile in toplevel directory.
  * Print usage information when shutdown is used by non-root user.
    Patch from Mike Frysinger and Gentoo.
  * Sync shutdown manual page and usage information.  Patch from Mike
    Frysinger and Gentoo.
  * Fix race condition in utmp writing.  Patch from Gil Kloepfer via
    Mike Frysinger and Gentoo.
  * Rewrite findtty() in bootlogd to recursively search /dev/ for the
    correct device, to handle terminal devices for example in /dev/pty/.
    Patch from Debian.
  * Make sure bootlogd findpty() returns an error value when it fails to
    find a usable pty.  Patch from Rob Leslie via Debian.
  * Make sure bootlogd fflush() every line, even if asked not to flush
    to disk using fdatasync().  Patch from Scott Gifford via Debian.

  [ Werner Fink ]
  * Add the comment from Andrea Arcangeli about the correct